# kdocumentstore

./: CMakeLists.txt  KDocumentStoreConfig.cmake.in  KVariantStoreConfig.cmake.in
src/: CMakeLists.txt  kdocumentcollection.cpp  kdocumentcollection.h  kdocumentquery.cpp  kdocumentquery.h  kdocumentstore.cpp  kdocumentstore.h  tools.h
src/autotest/: CMakeLists.txt  databasetest.cpp
